# personal-agent

./: .gitignore  .ruff.toml  Makefile  README.md  __main__.py  a2a_client.py  docker-compose.yml  main.py  pyproject.toml  setup.bash
agents/: __init__.py
agents/expense_tracking_assistant/: .example.env  __init__.py  agent.py  instruction.md
agents/expense_tracking_assistant/models/: __init__.py  expense.py
agents/google_search_agent/: __init__.py  agent.py
agents/personal_finance_assistant/: .env.example  Dockerfile  __init__.py  __main__.py  a2a_agent.py  a2a_app.py  agent.py  agent_executor.py  instruction.md  remote_agent_connection.py
agents/personal_finance_assistant/models/: __init__.py  expense.py
agents/personal_finance_assistant/sub_agents/: __init__.py
agents/personal_finance_assistant/sub_agents/expense_tracking_assistant/: __init__.py  agent.py  instruction.md
agents/personal_finance_assistant/tools/: __init__.py  user.py
clients/aivora/: drizzle.config.ts  next.config.ts  package.json  pnpm-lock.yaml
clients/aivora/src/app/: page.tsx  (+2 more)
clients/askaivoraapp/: app.json  package.json
clients/askaivoraapp/app/: index.tsx  not-found.tsx
clients/cli/: .env.example  __main__.py
common_models/: __init__.py  base_adk_a2a_app.py  base_adk_agent.py  base_adk_agent_executor.py  tool_response.py
common_tools/: __init__.py  date.py  google_search.py  time.py
common_utils/: __init__.py  string.py
config/: app_init.sql  init.sql  toolbox.yaml
sqls/: auth.sql  toolbox.sql
utils/: __init__.py  environment.py  file.py  logger.py  string.py
(+24 files in other folders)
